--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
         <title>Pac-Man</title>
-        <link rel="stylesheet" href="pacman.css">
-        <script src="pacman.js"></script>
+        <link rel="stylesheet" href="snowball.css">
+        <script src="snowball.js"></script>
     </head>
     <body>
         <canvas id="board"></canvas>
