--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport", content="width=device-width, initial-scale=1.0">
-        <title>Pac-Man</title>
+        <title>SnowBall</title>
         <link rel="stylesheet" href="snowball.css">
         <script src="snowball.js"></script>
     </head>
     <body>
+        <p id="instructions">Press F (Player 1) or Enter (Player 2) to throw a snowball.</p>
         <canvas id="board"></canvas>
     </body>
 </html>
